aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__mul__tests__mul_lit_reg_expr.snap
---
source: aya-assembly/src/parser/instructions/mul.rs
expression: result
---
Instruction(
    MulLitReg(
        Register(
            ByteOffset {
                start: 4,
                end: 6,
            },
        ),
        BinaryOp {
            lhs: HexLiteral(
                ByteOffset {
                    start: 10,
                    end: 14,
                },
            ),
            operator: Add,
            rhs: Register(
                ByteOffset {
                    start: 17,
                    end: 19,
                },
            ),
        },
    ),
)
