aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__mul__tests__mul_lit_reg_var.snap
---
source: aya-assembly/src/parser/instructions/mul.rs
expression: result
---
Instruction(
    MulLitReg(
        Register(
            ByteOffset {
                start: 4,
                end: 6,
            },
        ),
        Var(
            ByteOffset {
                start: 9,
                end: 12,
            },
        ),
    ),
)
