aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__mul__tests__mul_reg_reg.snap
---
source: aya-assembly/src/parser/instructions/mul.rs
expression: result
---
Instruction(
    MulRegReg(
        Register(
            ByteOffset {
                start: 4,
                end: 6,
            },
        ),
        Register(
            ByteOffset {
                start: 8,
                end: 10,
            },
        ),
    ),
)
